          CHANGES IN SOUNDGEN VERSION 1.5.1.9000 [...date...]
BUGS FIXED:
  * analyze(): proper plotting of oscillogram for audio files

NEW FUNCTIONS:
  * transplantEnv(): transplants the amplitude envelope from one sound to another

MINOR:
  * soundgen(): vectorized vocal tract length ("vocalTract" argument) - note that this is similar to the "mouth" argument, but with bandwidths adjusted appropriately and with no limitation on the magnitude of formant frequency shifts
  * soundgen(): a new argument, "formantCeiling", adjusts the frequency to which formant are calculated - increase for extra precision, particularly for longer-than-human vocal tracts
  * playme(), soundgen(): the default player on Mac is "afplay"
  * pitch_app(): choose summary function, reset to defaults, etc.
  * analyze() and analyzeFolder() accept manually checked pitch contours as produced by pitch_app ("pitchManual" argument)
  * segment(), segmentFolder(): added oscillogram, improved accuracy of timing
  * transplantFormants() accepts spectral filter produced by getSpectralEnvelope() as an alternative to donor sound


          CHANGES IN SOUNDGEN VERSION 1.5.1 [12-October-2019]
BUGS FIXED:
  * pitch_app() runs locally, new layout, multiple new features, integrated with analyze()
  * analyze() and pitch_app(): improved accuracy of autocorrelation-based pitch tracking at high frequencies

NEW FUNCTIONS:
  * pitchSmoothPraat(): smoothes pitch contours with the same algorithm and "bandwidth" parameter as in Praat for improved compatibility
  * getPrior(): extract and/or plot the prior used for adjusting the certainty in pitch estimates in analyze()

MINOR:
  * soundgen_app(): improved tips
  * spectrogram(): option to plot frequencies on a logarithmic scale (yScale = 'log') and specify units (ms/s and Hz/kHz)
  * spectrogram(): by default pads sounds with silence so as to analyze the edges (padWithSilence = TRUE)