@@ -26,6 +26,7 @@ export(getRandomWalk)
 export(getRolloff)
 export(getSmoothContour)
 export(getSpectralEnvelope)
+export(invertSpectrogram)
 export(matchPars)
 export(modulationSpectrum)
 export(modulationSpectrumFolder)
