@@ -1,0 +1,5 @@
+#' Invert modulation spectrum
+#'
+invertModulationSpectrum = function() {
+
+}
