@@ -1,0 +1,11 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/invertModulSpec.R
+\name{invertModulationSpectrum}
+\alias{invertModulationSpectrum}
+\title{Invert modulation spectrum}
+\usage{
+invertModulationSpectrum()
+}
+\description{
+Invert modulation spectrum
+}
